--- a/blocks/header/__link/_lang/header__link_lang_ru.css
+++ b/blocks/header/__link/_lang/header__link_lang_ru.css
@@ -1,4 +1,4 @@
-.header__lang-link_lang_ru {
+.header__link_lang_ru {
     color: white;
     margin-right: 18px;
     font-size: 24px;
@@ -8,16 +8,16 @@
     transition: opacity .5s ease-in-out;
 }
 
-.header__lang-link_lang_ru:visited {
+.header__link_lang_ru:visited {
     color: white;
 }
 
-.header__lang-link_lang_ru:hover {
+.header__link_lang_ru:hover {
     opacity: .5;
 }
 
 @media (max-width: 480px) {
-    .header__lang-link_lang_ru {
+    .header__link_lang_ru {
         font-size: 18px;
         line-height: 20px;
     }
