--- a/blocks/header/__lang/_ru/header__lang_ru.css
+++ b/blocks/header/__lang/_ru/header__lang_ru.css
@@ -1,6 +1,6 @@
-.header__link_lang_en {
+.header__lang_ru {
     color: white;
-    text-decoration: none;
+    margin-right: 18px;
     font-size: 24px;
     line-height: 28px;
     font-weight: normal;
@@ -8,16 +8,16 @@
     transition: opacity .5s ease-in-out;
 }
 
-.header__link_lang_en:visited {
+.header__lang_ru:visited {
     color: white;
 }
 
-.header__link_lang_en:hover {
+.header__lang_ru:hover {
     opacity: .5;
 }
 
 @media (max-width: 480px) {
-    .header__link_lang_en {
+    .header__lang_ru {
         font-size: 18px;
         line-height: 20px;
     }
