--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -1,23 +1,24 @@
-.header__lang_en {
+.header__lang {
     color: white;
     text-decoration: none;
     font-size: 24px;
     line-height: 28px;
     font-weight: normal;
     opacity: 1;
+    margin-left: 18px;
     transition: opacity .5s ease-in-out;
 }
 
-.header__lang_en:visited {
+.header__lang:visited {
     color: white;
 }
 
-.header__lang_en:hover {
+.header__lang:hover {
     opacity: .5;
 }
 
 @media (max-width: 480px) {
-    .header__lang_en {
+    .header__lang {
         font-size: 18px;
         line-height: 20px;
     }
