--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -1,3 +1,9 @@
 .place__description {
     grid-area: paragraph;
 }
+
+@media (max-width: 480px) {
+    .place__description {
+        margin-left: 16px;
+    }
+}
