--- a/blocks/place/__url-link/place__url-link.css
+++ b/blocks/place/__url-link/place__url-link.css
@@ -4,8 +4,7 @@
     font-weight: normal;
     line-height: 22px;
     text-align: left;
-    opacity: 1;
-    transition: opacity .5s ease-in-out;
+    transition: color .5s ease-in-out;
 }
 
 .place__url-link:visited {
@@ -13,5 +12,5 @@
 }
 
 .place__url-link:hover {
-    opacity: .5;
+    color: #AAAAAA;
 }
