--- a/blocks/place/__url/place__url.css
+++ b/blocks/place/__url/place__url.css
@@ -2,3 +2,9 @@
     grid-area: url;
     align-self: flex-end;
 }
+
+@media (max-width: 480px) {
+    .place__url {
+        margin-left: 16px;
+    }
+}
