--- a/blocks/cover/__image/cover__image.css
+++ b/blocks/cover/__image/cover__image.css
@@ -1,4 +1,5 @@
 .cover__image {
+    background-image: url(../../../images/cover-trains.jpg);
     position: absolute;
     top: 0;
     right: 0;
@@ -7,8 +8,10 @@
     z-index: -2;
     display: block;
     object-fit: cover;
+    background-size: cover;
     width: 100%;
     height: 100%;
+    background-position: center;
 }
 
 @media (max-width: 1100px) {
