--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,3 +8,15 @@
     text-transform: uppercase;
     letter-spacing: 0.15em;
 }
+
+@media (max-width: 800px) {
+    .lead__caption {
+        margin-left: 24px;
+    }
+}
+
+@media (max-width: 480px) {
+    .lead__caption {
+        margin-left: 16px;
+    }
+}
