--- a/blocks/list/__item/list__item.css
+++ b/blocks/list/__item/list__item.css
@@ -1,7 +1,7 @@
 .list__item {
     color: white;
     font-size: 12px;
-    font-weight: normal;
+    font-weight: bold;
     line-height: 18px;
     text-align: left;
 }
