--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -7,6 +7,10 @@
     margin: 0 0 26px 0;
 }
 
+.place__paragraph:last-child {
+    margin: 0;
+}
+
 @media (max-width: 800px) {
     .place__paragraph {
         font-size: 16px;
@@ -14,9 +18,3 @@
     }
 }
 
-@media (max-width: 700px) {
-    .place__paragraph {
-        font-size: 16px;
-        line-height: 26px;
-    }
-}
