--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,10 @@
 @import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
+@import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
-@import url(../blocks/header/__link/header__lonk.css);
 @import url(../blocks/header/__lang/header__lang.css);
 @import url(../blocks/header/__lang/_selected/header__lang_selected.css);
 @import url(../blocks/lead/lead.css);
@@ -16,11 +17,13 @@
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/list/list.css);
 @import url(../blocks/list/__item/list__item.css);
+@import url(../blocks/list/__span/list__span.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
 @import url(../blocks/places/places.css);
-@import url(../blocks/container/container.css);
+@import url(../blocks/places/__container/places__container.css);
 @import url(../blocks/place/place.css);
+@import url(../blocks/place/__description/place__description.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__url/place__url.css);
@@ -33,6 +36,7 @@
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__image/cover__image.css);
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__nav/footer__nav.css);
 @import url(../blocks/footer/__list/footer__list.css);
 @import url(../blocks/footer/__item/footer__item.css);
 @import url(../blocks/footer/__link/footer__link.css);
