--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -4,6 +4,6 @@
     line-height: 12px;
     text-align: left;
     color: #AAAAAA;
-    letter-spacing: 20%;
+    letter-spacing: 3px;
     margin: 0 0 12px 0;
 }
