--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -6,10 +6,16 @@
     font-weight: normal;
     opacity: 1;
     margin-left: 18px;
+    opacity: 1;
+    transition: opacity .5s ease-in-out;
 }
 
 .header__lang:visited {
     color: white;
+}
+
+.header__lang:hover {
+    opacity: .8;
 }
 
 @media (max-width: 480px) {
