--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -4,6 +4,7 @@
 
 @media (max-width: 480px) {
     .place__description {
-        margin-left: 16px;
+        width: calc(100% - 16px*2);
+        margin: 0 auto;
     }
 }
