--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -25,6 +25,7 @@
 
 @media (max-width: 480px) {
     .place__title {
-        margin-left: 16px;
+        width: calc(100% - 16px*2);
+        margin: 0 auto;
     }
 }
