--- a/blocks/place/__url/place__url.css
+++ b/blocks/place/__url/place__url.css
@@ -5,6 +5,7 @@
 
 @media (max-width: 480px) {
     .place__url {
-        margin-left: 16px;
+        width: calc(100% - 16px*2);
+        margin: 0 auto;
     }
 }
